--- a/GalleryExample01/app/src/main/res/layout/picture.xml
+++ b/GalleryExample01/app/src/main/res/layout/picture.xml
@@ -26,9 +26,9 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"/>
 
-    <TextView
+    <ImageView
         android:id="@+id/picture"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxWidth="200dp"
         android:maxHeight="200dp"
